fix ModalWrapper z-index

--- a/src/components/ModalWrapper.scss
+++ b/src/components/ModalWrapper.scss
@@ -39,7 +39,7 @@ $danger: rgba(220, 53, 69, 0.7);
 
 .ModalWrapper {
   display: flex;
-  z-index: 10001;
+  z-index: 10004;
   position: fixed;
   width: 100%;
   height: 100vh;
